assets/css/main.css
/* ... */
#tags .back_to_home {
  text-align: center;
  margin-top: 4rem;
}

#tags .back_to_home a {
  text-decoration: none;
  font-size: 1.2rem;
  color: #262626;
}

#tags .back_to_home a:hover {
  text-decoration: underline;
}

.about_box {
  position: absolute;
  -webkit-border-radius: 0.5rem;
          border-radius: 0.5rem;
  width: 600px;
  max-width: 90%;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  overflow: auto;
}

.about {
  position: relative;
  width: 100%;
  height: 100vh;
  min-height: 700px;
  background-image: url(../img/alaska.jpg);
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
}

.about .author {
  -webkit-border-radius: 0.5rem;
          border-radius: 0.5rem;
  margin-bottom: 1rem;
}

.about .author .author_image {
  float: none;
  display: block;
  margin: 0 auto 1.75rem;
}

.about .author .author_info {
  padding: 0;
  text-align: center;
}

.about .about_social {
  -webkit-border-radius: 0.5rem;
          border-radius: 0.5rem;
  overflow: hidden;
}

.about .about_social .social_footer {
  padding: 0;
  margin: 0;
  border: none;
}

.about .about_social .social_footer a {
  font-size: 1rem;
  color: #262626;
  background-color: #ffffff;
}

.about .about_social .social_footer a:hover {
  color: #c0334a;
}













/*------Events page------*/
.event_box {
  position: absolute;
  -webkit-border-radius: 0.5rem;
          border-radius: 0.5rem;
  width: 600px;
  max-width: 90%;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  overflow: auto;
}

.events {
  position: relative;
  width: 100%;
  height: 100vh;
  min-height: 800px;
  background-image: url(../img/bg_about.jpg);
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  
  animation-delay:0.8s;
  animation-duration:0.7s;
  animation-fill-mode: both;
  animation-name: fadeInDown;
}

.events .event {
  -webkit-border-radius: 0.5rem;
          border-radius: 0.5rem;
  margin-bottom: 1rem;
}

.events .event .author_image {
  float: none;
  display: block;
  margin: 0 auto 1.75rem;
}

.events .event .info {
  padding: 0;
  text-align: center;
}

.events .about_social {
  -webkit-border-radius: 0.5rem;
          border-radius: 0.5rem;
  overflow: hidden;
}

.events .about_social .social_footer {
  padding: 0;
  margin: 0;
  border: none;
}

.events .about_social .social_footer a {
  font-size: 1rem;
  color: #262626;
  background-color: #ffffff;
}

.events .about_social .social_footer a:hover {
  color: #c0334a;
}

.event {
  padding: 2rem 0.5rem;
  margin-bottom: 1.5rem;
  background-color: #ffffffc7;
}

.event .info {
  padding-left: 8rem;
}

.event .info .author_title {
  font-size: 1.5rem;
  margin-bottom: 0;
  color: #262626;
}

.event .author_social span {
  display: inline-block;
  color: #667085;
  padding-right: 0.5rem;
  margin: 0 0.5rem 0.5rem 0;
  border-right: 1px solid #667085;
  font-size: 0.8rem;
  letter-spacing: 1px;
}

.event .info .author_subtitle{
	color: #676b88;
	font-size: 1rem;
	white-space: pre-line;
}

.event .info .author_subtitle a{
	color: #676b88;
}

.event .author_social span:last-child {
  border-right: none;
}

.event .info .author_title::before, .event .info .author_title::after {
  content: " — ";
}

.event .author_social span a {
  color: #667085;
  text-decoration: none;
}

.event .author_social span a:hover {
  opacity: .9;
}
/*-------end of events page--------*/








.contact {
  width: 100%;
  height: 100vh;
  min-height: 700px;
  position: relative;
  background-image: url(../img/bg_contact.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  overflow: auto;
}

.container_contact {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  width: 960px;
  max-width: 100%;
}

.container_contact .form_title {
  text-align: center;
  text-transform: uppercase;
  font-size: 1.2rem;
  color: #ffffff;
}

.container_contact .form_title::before, .container_contact .form_title::after {
  content: " — ";
}

.container_contact .form {
  width: 90%;
  margin: 0 auto;
}

.container_contact .form .form_group {
  margin-top: 3rem;
  text-align: center;
}

.container_contact .form input, .container_contact .form textarea {
  width: 100%;
  padding: 1rem;
  background-color: rgba(255, 255, 255, 0.4);
  color: #ffffff;
  font-weight: 300;
  -webkit-transition: all .35s ease-in-out;
  transition: all .35s ease-in-out;
}

.container_contact .form input:focus, .container_contact .form textarea:focus {
  background-color: rgba(191, 127, 127, 0.6);
}

.container_contact .form .form_btn {
  width: inherit;
  color: #ffffff;
  text-transform: uppercase;
  outline: none;
  border: none;
  background-color: rgba(255, 255, 255, 0.4);
  padding: 1rem 3rem;
  -webkit-border-radius: 3rem;
          border-radius: 3rem;
  cursor: pointer;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

.container_contact .form .form_btn:hover {
  background-color: rgba(191, 127, 127, 0.6);
  color: #ffffff;
}

.container_contact .form .form_btn:active {
  -webkit-transform: translateY(2px);
      -ms-transform: translateY(2px);
          transform: translateY(2px);
}

#banner,
.main_header,
.page-content,
.post_content,
.about,
.contact {
  -webkit-animation-duration: 0.7s;
          animation-duration: 0.7s;
  -webkit-animation-fill-mode: both;
          animation-fill-mode: both;
  -webkit-animation-name: fadeInDown;
          animation-name: fadeInDown;
}

#banner,
.main_header {
  -webkit-animation-delay: 0.5s;
          animation-delay: 0.5s;
}
/* ... */

